public interface Video {
    String getName();
    String getGenre();
    int getRuntime();
}
