@startuml
skinparam classAttributeIconSize 0

class Client


interface Video {
+getName(): String
+setName(String): void
+getGenre(): String
+setGenre(String): void
+getRuntime(): int
+setRuntime(int): void
}

class Movie {
-name: String
-genre: String
-runtimeInMinutes: int

+Movie()
+getName(): String
+setName(String): void
+getGenre(): String
+setGenre(String): void
+getRuntime(): int
+setRuntime(int): void
}

class Episode {
-name: String
-genre: String
-season: int
-episodeNo: int
-runtimeInMinutes: int

+Episode()
+getName(): String
+setName(String): void
+getGenre(): String
+setGenre(String): void
+getEpisode(): String
+getRuntime(): int
+setRuntime(int): void
+setEpisode(int, int): void
}

class VideoPlayer {
-status: Status
-currentPlayTime: int

+VideoPlayer(Video)
+setStatus(Status):void
+getStatus():Status
+setVideo(Video):void
+getVideo():Video
+getCurrentPlayTime(): int
+setCurrentPlayTime(int): void
+getCurrentState(): VideoPlayerMemento
+restoreState(VideoPlayerMemento): void
}

class VideoPlayerMemento {
-videoPlayer: VideoPlayer

+getVideoPlayer(): VideoPlayer
+setVideoPlayer(VideoPlayer): void
}

Enum Status{
PLAYING
PAUSED
}

Video <|... Movie
Video <|... Episode

VideoPlayer ..> Video
VideoPlayerMemento .> VideoPlayer

@enduml